--- a/afrimages/frontend/src/app/globals.css
+++ b/afrimages/frontend/src/app/globals.css
@@ -53,7 +53,7 @@ label {
 }
 
 .auth > div input {
-  @apply border-black border-[1px] p-2 rounded-lg;
+  @apply border-black border-[1px] p-2 md:py-4 md:px-3 md:text-sm rounded-lg;
 }
 
 .overlay {
@@ -227,3 +227,23 @@ form input {
 input[type='file'] {
   @apply absolute top-0 w-[80px] h-[60px] opacity-0;
 }
+
+.loader {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 3px solid #FFF;
+  border-right: 3px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
